# bilingual_aligner

./: .gitignore  ALGORITHM.md  ALGORITHM_CN.md  LICENSE  README.md  README_CN.md  pyproject.toml  test_misalignment_impact.py
bilingual_aligner/: __init__.py  api.py  cli.py  corpus.py  dp_aligner_two_stage.py  enum_pruning_aligner.py  line_number_manager.py  location_range.py  position.py  repair_applier.py  utils.py
bilingual_aligner/aligners/: __init__.py  dp_aligner_two_stage.py  enum_pruning_aligner.py
bilingual_aligner/alignment/: __init__.py  base.py  enum_aligner.py
bilingual_aligner/analyzer/: __init__.py  base.py  comparison.py  encoding.py  punctuation.py  similarity.py
bilingual_aligner/core/: __init__.py  processor.py  punctuation.py  repairer.py  splitter.py
bilingual_aligner/output/: __init__.py  formatter.py
bilingual_aligner/repair/: __init__.py  coordinator.py  executor.py  models.py
demo/: demo.py  encoding_benchmark.py  encoding_comparison_results.csv  repair_stats.csv  sample_en.md  sample_zh.md  stats_repaired.py
scripts/: migrate_repair_logs.py
tests/: __init__.py  conftest.py  sentence_splitter_test.py  test_alignment_weight_impact.py  test_all.py  test_ellipsis.py  test_punctuation_weight.py
tools/: __init__.py  compare_models.py  encoding_analyzer.py  encoding_comparison.py  punctuation_analyzer.py  repair_test.py  similarity.py  test_alignment_weight_impact.py  test_punctuation_weight.py
