[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilingual-aligner"
version = "0.6.0"
description = "A library for bilingual text alignment and repair"
authors = [
    {name = "Elysia", email = "dr.zqr@outlook.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers",
    "scikit-learn",
    "numpy",
    "dataclasses; python_version < '3.7'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
bilingual-aligner = "bilingual_aligner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bilingual_aligner"]